--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-
-  <app-block class="position-tr"></app-block>
-  <app-block class="position-tl"></app-block>
-  <app-block class="position-br"></app-block>
-  <app-block class="position-bl"></app-block>
-
-
-
+<app-user-profile></app-user-profile>
